examples/positive/L4/array_var.ob
MODULE ArrayVar;

VAR myArray: ARRAY 2 OF INTEGER;

END ArrayVar.
