examples/negative/parse_errors/L4/reserved_record.ob
MODULE Reserved;

VAR RECORD: INTEGER;

END Reserved.
